# PressFetch

./: .replit  app.py  pyproject.toml  replit.md
app/: __init__.py
app/config/: thresholds.yaml
app/fetchers/: __init__.py  ae.py  ambulance.py  cancer.py  community.py  diagnostics.py  maternity.py  rtt.py  workforce.py
app/utils/: __init__.py  audit.py  io.py  ods.py
attached_assets/: Pasted-Instructions-for-Replit-developer-brief-Scope-authoritative-sources-Fetch-the-latest-monthly-pr-1757527761642_1757527761643.txt
docs/: DATA_FETCHING_METHODOLOGY.md
static/css/: dashboard.css  report.css
static/js/: dashboard.js  report.js
templates/: dashboard.html  report.html
